src/objects/Call_Participant_2__c.object
<CustomObject>
    <description>Call participants associated with a call log.</description>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CallLogParticipant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CallLogParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Log__c</fullName>
        <label>Call Log</label>
        <referenceTo>Call_Log__c</referenceTo>
        <relationshipName>Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <formula>CallLogParticipant__r.EmployeeNumber</formula>
        <label>Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executive Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_Manager_Lvl_1__c</fullName>
        <formula>CallLogParticipant__r.Manager.Full_Name__c</formula>
        <label>Manager (Lvl 1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>CallLogParticipant__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Session Participant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Ellie_Call_Logs</fullName>
        <columns>NAME</columns>
        <columns>Attended__c</columns>
        <columns>Call_Log__c</columns>
        <columns>Executive_Sponsor__c</columns>
        <columns>CallLogParticipant__c</columns>
        <filterScope>Mine</filterScope>
        <label>Ellie Call Logs</label>
    </listViews>
    <listViews>
        <fullName>Operations_Analyst_Sales</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Operations Analyst, Sales</label>
    </listViews>
    <listViews>
        <fullName>testAAAA</fullName>
        <columns>NAME</columns>
        <columns>Attended__c</columns>
        <columns>CallLogParticipant__c</columns>
        <columns>Call_Log__c</columns>
        <filterScope>Everything</filterScope>
        <label>Call Participants Attendence</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>